cmake_minimum_required(VERSION 3.5)

project(git_qt_test LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(git_qt_test main.cpp)

include(GNUInstallDirs)
install(TARGETS git_qt_test
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)
